k8s/base/fastapi/catchtable-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: development
  annotations:
    # nginx.ingress.k8s.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: myapp.catchtable.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catchtable
            port:
              number: 8000
